--- a/FamHelpDeskInfra/package.json
+++ b/FamHelpDeskInfra/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "format": "npx prettier --write ."
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
@@ -17,7 +18,8 @@
     "ts-jest": "^29.2.5",
     "aws-cdk": "2.1030.0",
     "ts-node": "^10.9.2",
-    "typescript": "~5.6.3"
+    "typescript": "~5.6.3",
+    "prettier": "3.0.3"
   },
   "dependencies": {
     "aws-cdk-lib": "2.215.0",
